# ECOM100_Listas

./: README.md  VisaoComp_Lista1.ipynb
lista1/: README.md  common.h  cvui.h
lista1/questao3/: README.md  kernel.cpp  kernel_nxn.cpp
wxcv/: CMakeLists.txt
wxcv/src/: main.cpp  wxCV.h  wxCvFilter2dDialog.cpp  wxCvFilter2dDialog.h  wxCvImagePanel.cpp  wxCvImagePanel.h  wxCvResizeDialog.cpp  wxCvResizeDialog.h  wxCvThresholdDialog.cpp  wxCvThresholdDialog.h
